#2877 - Fix Feedback block spacing issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_video.scss
@@ -910,6 +910,10 @@
 
 }
 
+#video-stream .bp-feedback {
+	margin: 25px 0 0 0;
+}
+
 /*Video Popups*/
 
 .video-thumbnail-content {
