--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -20530,6 +20530,10 @@ html[dir="rtl"] .theme-editor-php .CodeMirror-code {
   }
 }
 
+#video-stream .bp-feedback {
+  margin: 25px 0 0 0;
+}
+
 /*Video Popups*/
 .video-thumbnail-content {
   display: block;
